samples/_failures_safe/1761624982_e352f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_905a67df.c: In function ‘main’:
./samples/SAFE/__tmp_905a67df.c:137:20: error: missing terminating " character
  137 |             printf("Invalid operation\n
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_905a67df.c:137:13: error: expected expression at end of input
  137 |             printf("Invalid operation\n
      |             ^~~~~~
./samples/SAFE/__tmp_905a67df.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_905a67df.c:137:13: error: expected declaration or statement at end of input
